[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "pii"
version = "0.1.0"
description = "Local PII redaction tool for PDFs"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "cryptography>=42",
    "click>=8.1",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
pii = "pii.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["pii*"]
